--- a/app/views/events/_event.html.slim
+++ b/app/views/events/_event.html.slim
@@ -1,4 +1,4 @@
-- cache [event] do
+- cache [event, event.actor] do
   tr.model-tr.event data-id=event.id id="event-#{event.id}" class="event_#{event.class.name.demodulize.underscore}"
     td.event-created-at data-creatd-at=event.created_at
       = event.created_at.strftime("%F %T")
